objects/Station__c.object
<CustomObject>
    <description>The (SIN) object represents the Charging Station Equipment that is installed at a Location (LIN). It holds the specific component information that was previously in &quot;Kiosk&quot; Objects.</description>
    <fields>
        <fullName>Access_Key__c</fullName>
        <label>Access Key</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>V3</fullName>
                </value>
                <value>
                    <fullName>V1</fullName>
                </value>
                <value>
                    <fullName>Standard Wallmount</fullName>
                </value>
                <value>
                    <fullName>Non-Standard - See LIN Location Notes</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Charger_Left__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Charger Left</label>
        <referenceTo>Charger__c</referenceTo>
        <relationshipLabel>Stations</relationshipLabel>
        <relationshipName>Stations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Charger_Right__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Charger Right</label>
        <referenceTo>Charger__c</referenceTo>
        <relationshipLabel>Stations (Charger Right)</relationshipLabel>
        <relationshipName>Stations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Charging_Unit__c</fullName>
        <label>Charging Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Clipper Creek</fullName>
                </value>
                <value>
                    <fullName>Leviton</fullName>
                </value>
                <value>
                    <fullName>Tesla</fullName>
                </value>
                <value>
                    <fullName>Eaton</fullName>
                </value>
                <value>
                    <fullName>EMW</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cord_Type__c</fullName>
        <label>Cord Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Clipper Creek Gen 1 (White)</fullName>
                </value>
                <value>
                    <fullName>Clipper Creek Gen 2 (Black)</fullName>
                </value>
                <value>
                    <fullName>ITT</fullName>
                </value>
                <value>
                    <fullName>Leviton</fullName>
                </value>
                <value>
                    <fullName>Tesla HPWC</fullName>
                </value>
                <value>
                    <fullName>GreatLink</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ECU__c</fullName>
        <description>Environmental Control Unit Model</description>
        <inlineHelpText>Environmental Control Unit Model</inlineHelpText>
        <label>ECU</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Peerless CL-ENCL68</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EKM_Meter_Left__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the meter attached to the left charging port of the station if you&apos;re looking at the small face on a dual charge port.</description>
        <inlineHelpText>This is the meter attached to the left charging port of the station if you&apos;re looking at the small face on a dual charge port.</inlineHelpText>
        <label>EKM Meter Left</label>
        <referenceTo>EKM_Meter__c</referenceTo>
        <relationshipLabel>Stations</relationshipLabel>
        <relationshipName>Stations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EKM_Meter_Right__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the meter attached to the right charging port of the station if you&apos;re looking at the small face on a dual charge port.</description>
        <inlineHelpText>This is the meter attached to the right charging port of the station if you&apos;re looking at the small face on a dual charge port.</inlineHelpText>
        <label>EKM Meter Right</label>
        <referenceTo>EKM_Meter__c</referenceTo>
        <relationshipLabel>Stations (EKM Meter Right)</relationshipLabel>
        <relationshipName>Stations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EKM_Push__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EKM Push</label>
        <referenceTo>EKM_Push__c</referenceTo>
        <relationshipLabel>Stations</relationshipLabel>
        <relationshipName>Stations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Face_Specification_Back__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Face Specification Back</label>
        <referenceTo>Face_Specification__c</referenceTo>
        <relationshipLabel>Stations (Back Face Specification)</relationshipLabel>
        <relationshipName>Stations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Face_Specification_Front__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Face Specification Front</label>
        <referenceTo>Face_Specification__c</referenceTo>
        <relationshipLabel>Stations</relationshipLabel>
        <relationshipName>Stations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hanging_Mechanism_lg_static__c</fullName>
        <description>To keep track of hanging mechanisms for use in troubleshooting and to collect data on the frequency of failure for each type of light box.</description>
        <label>Hanging Mechanism (lg static)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Frame Clamps</fullName>
                </value>
                <value>
                    <fullName>Thumb Screw Clamps</fullName>
                </value>
                <value>
                    <fullName>Magnets</fullName>
                </value>
                <value>
                    <fullName>Velco</fullName>
                </value>
                <value>
                    <fullName>Tape</fullName>
                </value>
                <value>
                    <fullName>Other - see &quot;location notes&quot; on LIN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Kiosk_No__c</fullName>
        <description>This is the &quot;Kiosk No&quot; assigned by the station manufacturer. It correlates to the &quot;SIN&quot; however is a different number. Typically on the bottom left chassis area of a V3 station, and is typically hand written on the 220v aluminum power distribution box on V2s from Walker.</description>
        <inlineHelpText>This is the &quot;Kiosk No&quot; assigned by the station manufacturer. It correlates to the &quot;SIN&quot; however is a different number. Typically on the bottom left chassis area of a V3 station, and is typically hand written on the 220v aluminum power distribution box on</inlineHelpText>
        <label>Kiosk No</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Left_Charger_Manufacturer__c</fullName>
        <formula>TEXT(Charger_Left__r.Manufacturer__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Left Charger Manufacturer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Left_Firmware_Level__c</fullName>
        <formula>TEXT(Charger_Left__r.Firmware_Level__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Left Firmware Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_KIN_Suffix__c</fullName>
        <label>Legacy KIN Suffix</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Station_type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>-W</fullName>
                </value>
                <value>
                    <fullName>-K</fullName>
                </value>
                <value>
                    <fullName>-P</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>M2M_Network__c</fullName>
        <formula>Text(M2M__r.Network__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M2M Network</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M2M_Product__c</fullName>
        <formula>TEXT(M2M__r.Product__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M2M Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M2M__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>M2M</label>
        <referenceTo>M2M__c</referenceTo>
        <relationshipLabel>Stations</relationshipLabel>
        <relationshipName>Stations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manufacturer_Station_Serial__c</fullName>
        <description>Peerless&apos; Internal Serial</description>
        <inlineHelpText>Peerless&apos; Internal Serial</inlineHelpText>
        <label>Manufacturer Station Model</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>K1CSDIGT47SUB</fullName>
                </value>
                <value>
                    <fullName>K1CSHYBR47MPSUB</fullName>
                </value>
                <value>
                    <fullName>1701CSHYBR47MPSUB</fullName>
                </value>
                <value>
                    <fullName>K1CSHYBR49</fullName>
                </value>
                <value>
                    <fullName>0300-00-029</fullName>
                </value>
                <value>
                    <fullName>K2CSHYBR49-C</fullName>
                </value>
                <value>
                    <fullName>K1CSHYBR49-C</fullName>
                </value>
                <value>
                    <fullName>K1CSHYBR49-E</fullName>
                </value>
                <value>
                    <fullName>K1CSHYBR55-F</fullName>
                </value>
                <value>
                    <fullName>K1CSHYBR55-G</fullName>
                </value>
                <value>
                    <fullName>K1CSHYBR55-H</fullName>
                </value>
                <value>
                    <fullName>K1CSHYBR55-I</fullName>
                </value>
                <value>
                    <fullName>K1CSHYBR55-J</fullName>
                </value>
                <value>
                    <fullName>K1CSHYBR55-K</fullName>
                </value>
                <value>
                    <fullName>K1CSHYBR55-L</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <label>Manufacturer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Peerless</fullName>
                </value>
                <value>
                    <fullName>Walker</fullName>
                </value>
                <value>
                    <fullName>Clipper Creek (Pedestal)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Media_Player_Back__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Media Player Serial # of the controller to the back digital screen</description>
        <inlineHelpText>Media Player Serial # of the controller to the back digital screen</inlineHelpText>
        <label>Media Player Back</label>
        <referenceTo>Media_Player__c</referenceTo>
        <relationshipLabel>Stations (Media Player Back)</relationshipLabel>
        <relationshipName>Stations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Media_Player__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Media Player Front</label>
        <referenceTo>Media_Player__c</referenceTo>
        <relationshipLabel>Stations</relationshipLabel>
        <relationshipName>Stations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Media_Software_Version_Back__c</fullName>
        <formula>TEXT(Media_Player_Back__r.Software_Version__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Media Software Version Back</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Media_Software_Version_Front__c</fullName>
        <formula>TEXT(Media_Player__r.Software_Version__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Media Software Version Front</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Media_Type__c</fullName>
        <label>Media Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hybrid</fullName>
                </value>
                <value>
                    <fullName>Dual Digital</fullName>
                </value>
                <value>
                    <fullName>Single Static</fullName>
                </value>
                <value>
                    <fullName>Dual Static</fullName>
                </value>
                <value>
                    <fullName>Single Digital</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Defunct</fullName>
                    <isActive>false</isActive>
                    <label>Defunct</label>
                </value>
                <value>
                    <fullName>Digital</fullName>
                    <isActive>false</isActive>
                    <label>Digital</label>
                </value>
                <value>
                    <fullName>Pedestal</fullName>
                    <isActive>false</isActive>
                    <label>Pedestal</label>
                </value>
                <value>
                    <fullName>Static</fullName>
                    <isActive>false</isActive>
                    <label>Static</label>
                </value>
                <value>
                    <fullName>Wall-Mounted</fullName>
                    <isActive>false</isActive>
                    <label>Wall-Mounted</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Production_Build_Nickname__c</fullName>
        <formula>HYPERLINK( Production_Build__c , Production_Build__r.Production_Build_Nickname__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Production Build Nickname</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production_Build__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Production Build</label>
        <referenceTo>Production_Build__c</referenceTo>
        <relationshipLabel>Stations</relationshipLabel>
        <relationshipName>Stations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Right_Charger_Manufacturer__c</fullName>
        <formula>TEXT(Charger_Right__r.Manufacturer__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Right Charger Manufacturer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Right_Firmware_Level__c</fullName>
        <formula>TEXT(Charger_Right__r.Firmware_Level__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Right Firmware Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Station_type__c</fullName>
        <label>Station Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>V1</fullName>
                </value>
                <value>
                    <fullName>V2</fullName>
                </value>
                <value>
                    <fullName>V2.1</fullName>
                </value>
                <value>
                    <fullName>V2.2</fullName>
                </value>
                <value>
                    <fullName>V2.3</fullName>
                </value>
                <value>
                    <fullName>V3</fullName>
                </value>
                <value>
                    <fullName>Pedestal</fullName>
                </value>
                <value>
                    <fullName>Wall Mount</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>ABB Terra 53 CJ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Decommissioned Damaged</fullName>
                </value>
                <value>
                    <fullName>Decommissioned Redeployable</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Available</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Station (SIN)</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Manufacturer__c</columns>
        <columns>NAME</columns>
        <columns>Media_Type__c</columns>
        <columns>Station_type__c</columns>
        <columns>Face_Specification_Front__c</columns>
        <columns>Face_Specification_Back__c</columns>
        <columns>Charging_Unit__c</columns>
        <columns>Cord_Type__c</columns>
        <columns>EKM_Meter_Left__c</columns>
        <columns>EKM_Meter_Right__c</columns>
        <columns>EKM_Push__c</columns>
        <columns>Media_Player__c</columns>
        <columns>Status__c</columns>
        <columns>M2M__c</columns>
        <columns>M2M_Product__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_JuiceNet</fullName>
        <columns>Manufacturer__c</columns>
        <columns>NAME</columns>
        <columns>Station_type__c</columns>
        <columns>Charging_Unit__c</columns>
        <columns>EKM_Meter_Left__c</columns>
        <columns>Cord_Type__c</columns>
        <columns>EKM_Meter_Right__c</columns>
        <columns>EKM_Push__c</columns>
        <columns>Media_Player__c</columns>
        <columns>M2M__c</columns>
        <columns>Production_Build__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Charging_Unit__c</field>
            <operation>equals</operation>
            <value>EMW</value>
        </filters>
        <label>All JuiceNet</label>
    </listViews>
    <listViews>
        <fullName>All_v3</fullName>
        <columns>Manufacturer__c</columns>
        <columns>NAME</columns>
        <columns>Station_type__c</columns>
        <columns>Charging_Unit__c</columns>
        <columns>Cord_Type__c</columns>
        <columns>EKM_Meter_Left__c</columns>
        <columns>EKM_Meter_Right__c</columns>
        <columns>EKM_Push__c</columns>
        <columns>Media_Player__c</columns>
        <columns>M2M__c</columns>
        <columns>Production_Build__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Station_type__c</field>
            <operation>equals</operation>
            <value>V3</value>
        </filters>
        <label>All v3</label>
    </listViews>
    <listViews>
        <fullName>Alla</fullName>
        <columns>Manufacturer__c</columns>
        <columns>NAME</columns>
        <columns>Media_Type__c</columns>
        <columns>Station_type__c</columns>
        <columns>Production_Build__c</columns>
        <columns>Face_Specification_Front__c</columns>
        <columns>Face_Specification_Back__c</columns>
        <columns>Charging_Unit__c</columns>
        <columns>Cord_Type__c</columns>
        <columns>EKM_Meter_Left__c</columns>
        <columns>EKM_Meter_Right__c</columns>
        <columns>EKM_Push__c</columns>
        <columns>Media_Player__c</columns>
        <columns>M2M__c</columns>
        <columns>M2M_Product__c</columns>
        <filterScope>Everything</filterScope>
        <label>Alla</label>
    </listViews>
    <listViews>
        <fullName>Stations_with_no_M2M</fullName>
        <columns>NAME</columns>
        <columns>Station_type__c</columns>
        <columns>M2M__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>M2M__c</field>
            <operation>equals</operation>
        </filters>
        <label>Stations with no M2M record</label>
        <sharedTo>
            <group>Site_Ops_Review_Dash</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>V2</fullName>
        <columns>NAME</columns>
        <columns>Charging_Unit__c</columns>
        <columns>Cord_Type__c</columns>
        <columns>EKM_Meter_Left__c</columns>
        <columns>EKM_Meter_Right__c</columns>
        <columns>M2M__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Station_type__c</field>
            <operation>equals</operation>
            <value>V2,V2.1,V2.2,V2.3</value>
        </filters>
        <label>V2</label>
    </listViews>
    <listViews>
        <fullName>V3</fullName>
        <columns>Manufacturer__c</columns>
        <columns>NAME</columns>
        <columns>Charging_Unit__c</columns>
        <columns>Cord_Type__c</columns>
        <columns>EKM_Meter_Left__c</columns>
        <columns>EKM_Meter_Right__c</columns>
        <columns>M2M__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Station_type__c</field>
            <operation>equals</operation>
            <value>V3</value>
        </filters>
        <label>V3</label>
    </listViews>
    <nameField>
        <label>Station Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>